[project]
name = "track-analytics"
version = "0.1.0"
description = "Compare and analyze OsmAnd GPX tracks"
requires-python = ">=3.10"
dependencies = [
    "gpxpy>=1.6.0",
    "haversine>=2.8.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
]

[project.scripts]
track-analytics = "track_analytics.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
